--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
   <script>
   // ====== ตั้งค่า API ของคุณ ======
-  const API_BASE = 'https://script.google.com/macros/s/AKfycbzwWhsJyolGUPmZ2hMU8JpiYCGHdWytd6KF-Q6ttV81P5wwhoBd2UB4zoIk6vQGDyknFQ/exec';     // URL /exec จากการ Deploy
-  const API_KEY  = 'wwvGmIU9y7rotiTQY60iAGq';                            // ต้องตรงกับ SIMPLE_KEY
+  const API_BASE = 'https://script.google.com/macros/s/AKfycbzwWhsJyolGUPmZ2hMU8JpiYCGHdWytd6KF-Q6ttV81P5wwhoBd2UB4zoIk6vQGDyknFQ/exec';  // /exec จาก Deploy ล่าสุด
+  const API_KEY  = 'wwvGmIU9y7rotiTQY60iAGq';  // ต้องตรงกับ SIMPLE_KEY ใน Apps Script
 
   const selLine   = document.getElementById('line');
   const selSub    = document.getElementById('subLine');
