--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
       <!-- 1) Purpose + Working time -->
       <div class="section card">
-        <h2>1) Heading (Purpose) &emsp;&emsp;&emsp;&emsp;Working time</h2>
+        <h2>1) Heading (Purpose) &emsp;&emsp;&emsp;Working time</h2>
         <div class="grid2">
           <div>
             <select id="subject" name="subject" required>
